--- a/Project/package.json
+++ b/Project/package.json
@@ -7,14 +7,13 @@
     "node": "^14.15.1"
   },
   "dependencies": {
-    "assert": "^1.4.1",
-    "body-parser": "^1.18.3",
+    "assert": "*",
+    "body-parser": "*",
     "cookie-session": "*",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "mongodb": "^4.1.4",
-    "mongoose": "^8.0.1",
-    "nodemon": "^3.0.1"
+    "ejs": "*",
+    "express": "*",
+    "mongodb": "*",
+    "mongoose": "*"
   },
   "scripts": {
     "start": "node server.js"
