--- a/Project/package.json
+++ b/Project/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "Magician's Code",
+  "name": "magicians_code",
   "description": "In Magician's Code, we believe that magic should be shared with everyone. Stay magical!",
   "author": "SUKHJIT-SINGH, Bautista Arvie Adrian S., Limbu Utsab (Group 71)",
   "version": "0.0.1",
-  "engines": {
-    "node": "^14.15.1"
-  },
+  
   "dependencies": {
     "assert": "*",
     "body-parser": "*",
@@ -14,6 +12,9 @@
     "express": "*",
     "mongodb": "*",
     "mongoose": "*"
+  },
+  "engines": {
+    "node": "^14.15.1"
   },
   "scripts": {
     "start": "node server.js"
