--- a/Project/package.json
+++ b/Project/package.json
@@ -5,13 +5,13 @@
   "version": "0.0.1",
   
   "dependencies": {
-    "assert": "*",
-    "body-parser": "*",
-    "cookie-session": "*",
-    "ejs": "*",
-    "express": "*",
-    "mongodb": "*",
-    "mongoose": "*"
+    "assert": "^1.4.1",
+    "body-parser": "^1.18.3",
+    "cookie-session": "^1.4.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "mongodb": "^4.1.4",
+    "mongoose": "^8.0.1"
   },
   "engines": {
     "node": "^14.15.1"
